# waterio

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  Untitled.ipynb  mkdocs.yml  pyproject.toml  requirements.txt  saman_behjou.ipynb  saman_behjou_example3.ipynb  saman_behjou_with_feedback.ipynb  setup.py  solsysgen_tutorial.ipynb  solsysgen_waterio_presentation.ipynb  water.h5  web.txt
.github/workflows/: ci.yml
_demo_outputs/: system.json
cpp/: core.cpp
docs/: index.md  solsysgen.md  waterio.md
examples/: README.md  automatic_plot_in_notebook.ipynb  checkpoint_positions_npz.py  cython_planet_smoke.py  generate_and_summarize.py  json_roundtrip_check.py  planet_demo.py  quickstart.py  track_one_planet.py
solsysgen/: README.md  __init__.py  planet.py  solarsystem.py  sun.py
solsysgen/utils/: checkpoint.py
source/: conf.py  features.rst  index.rst  usage.rst
src/solsysgen/: __init__.py  checkpoint.py  constants.py  generation.py  io.py  iodata.py  kepler.py  models.py  planet.c  planet.py  planet.pyx  solar_system.py  sun.py  system.py
src/tests/: test_integration.py  test_planet.py  test_sun.py
src/waterio/: 1  _core.py  _fast.pyx  core.py  iodata.py
src/waterio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_checkpoint.py  test_generation.py  test_integration.py  test_models.py  test_planet.py  test_sun.py
