
[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"



[project]
name = "waterio"
version = "0.1.0"
description = "Read/write NumPy arrays to/from a checkpoint file."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24"]

authors = [
    { name = "Saman", email = "s.behjoo@gmai.com" },
]

license = { file = "LICENSE" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["solsysgen*", "waterio*"]

[project.optional-dependencies]
test = ["pytest"]

